# pre_trade_agent

./: .dockerignore  .env.example  .env_example  .gitignore  README.md  agent.py  daytona_sandbox.py  langgraph.json  prompt.py  pyproject.toml  requirements.txt
frontend/: index.html  server.py
rules/: README.md
rules/commonsense/: add_margin.json  close_position.json  collateral_buy.json  collateral_sell.json  concentration.json  credit_available.json  deposit_funds.json  full_position.json  maintenance_ratio.json  margin_buy.json  repay_debt.json  sell_repay.json  withdraw_funds.json  withdrawable_cash.json
rules/dimensions/: calculation_basis.json  constraint_priority.json  target_action.json  target_object.json
sandbox_seed/: README.md
sandbox_seed/formulas/: collateral_value.json  concentration_control.json  concentration_position.json  concentration_sector.json  credit_available_long.json  credit_available_short.json  credit_limit_long.json  credit_limit_short.json  long_margin_ratio.json  maintenance_ratio.json  margin_available.json  margin_buy_max_qty.json  margin_total.json  min_repay_for_withdraw.json  sell_collateral_for_cash.json  sell_to_repay.json  short_margin_ratio.json  short_sell_max_qty.json  total_assets.json  total_liabilities.json  withdrawable_cash.json
sandbox_seed/scenarios/: account_overview.json  concentration_check.json  credit_limit_query.json  maintenance_ratio_check.json  margin_buy_planning.json  margin_ratio_basics.json  short_sell_planning.json  withdraw_via_sell_repay.json  withdrawable_cash_check.json
